--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </p>
   <p>
     I am a student currently persuing <b>B.tech in CSE</b> from the technology department of HPU.<br />
-    I am in my third year and currently learning about web development.
+    I am in my third year and currently learning about web development using HTML.
   </p>
   <hr size="3" noshade />
   <h3>Education</h3>
